load_test/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/inbound-cidrs: 183.82.98.176/32,103.252.147.189/32,103.87.143.171/32
  finalizers:
  - ingress.k8s.aws/resources
  labels:
    app: ingress
  name: ingress-locust-dashboard
  namespace: workshop
spec:
  defaultBackend:
    service:
      name: awsblog-locust
      port:
        number: 8089
